# Westlake-Singularity

./: .gitignore  AGENTS.md  LICENSE  README.md  cli.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
agents/roles/: __init__.py  base.py  base_full.py  bus.py  compute.py  discovery.py  guard.py  mapper.py  orchestrator.py  registry.py
agents/wap/: __init__.py  protocol.py
branding/: banner.py  theme.yaml
branding/pixel_art/: quantum_circuit.txt  shield_32x32.txt
bus/: __init__.py  devices.py  events.py
compute/: __init__.py  manager.py  slurm.py
core/: __init__.py  integration.py  main.py
digital_twin/: __init__.py  engine.py
docker/: Dockerfile  docker-compose.yml
docs/architecture/: overview.md
docs/deployment/: GITHUB_GUIDE.md
empire/: __init__.py  manager.py
memory/: __init__.py  rag.py
perception/: __init__.py
perception/vision/: __init__.py  camera.py
skills/dev-pattern-s/: SKILL.md
skills/nature-response/: SKILL.md
skills/science-comsol/: SKILL.md
skills/science-comsol-setup/: SKILL.md
skills/science-comsol/references/: api-pitfalls.md  octave-rf-chain-simulation.md  wsl-authentication.md
skills/science-comsol/templates/: comsol_template.py
skills/science-layout-design/: SKILL.md
skills/science-layout-design/references/: canonical-6coil-layout.py  ebl-75nm-process-guide.md  fabrication-process-reference.md  fanout-routing-guide.md  gds-ascii-visualization.md  gds-v4-fanout-analysis.md
skills/science-majorana-qubit/: SKILL.md
tests/: __init__.py  conftest.py  test_digital_twin.py  test_empire.py  test_roles.py  test_tools.py
tools/: __init__.py  dft_tool.py  hardware_tool.py  lab_logger.py  realtime_tool.py  stm_controller.py  stm_tool.py
(+8 files in other folders)
