[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "westlake-singularity"
version = "0.2.0"
description = "AI-Native Quantum Laboratory Operating System — 西湖大学AI量子实验室"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jiaxiang Cong", email = "singularity@westlake.edu.cn"},
]
maintainers = [
    {name = "Westlake University, Westlake University"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Hermes is a local dependency (pip install -e hermes-base/)
    "numpy>=1.26",
    "websockets>=12.0",
    "asyncio",
]

[project.optional-dependencies]
full = [
    "vllm>=0.6.0",
    "torch>=2.4.0",
    "faiss-cpu>=1.8.0",
    "opencv-python>=4.9.0",
    "scipy>=1.12.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]

[project.scripts]
singularity = "core.main:main"
wls = "core.main:main"

[project.urls]
Homepage = "https://github.com/jiaxiang-cong/westlake-singularity"
Repository = "https://github.com/jiaxiang-cong/westlake-singularity.git"
Issues = "https://github.com/jiaxiang-cong/westlake-singularity/issues"
"Based On" = "https://github.com/NousResearch/hermes-agent"

[tool.setuptools.packages.find]
include = ["core*", "agents*", "tools*", "perception*", "compute*", "bus*", "memory*", "branding*", "docs*"]
